# NIKEstore-theft

./: .flake8  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: item.py  user.py
app/core/: config.py
app/crud/: __init__.py  crud_item.py  crud_recipe.py  crud_user.py
app/models/: item.py  user.py
app/schemas/: item.py  user.py
migration/: NIKEstore.db  env.py
migration/versions/: 601ff497fa96_initial_setting.py
